booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  selector:
    app: booking
  ports:
  - port: 9001
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking
spec:
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
      - name: booking
        image: southouse/istio-sample-booking
        ports:
        - containerPort: 8080
          protocol: TCP
