customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
    service: customer
spec:
  selector:
    app: customer
  ports:
  - port: 9001
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: customer
    version: v1
spec:
  selector:
    matchLabels:
      app: customer
      version: v1
  template:
    metadata:
      labels:
        app: customer
        version: v1
    spec:
      nodeSelector:
        kubernetes.io/hostname: minikube
      containers:
      - name: customer
        image: southouse/istio-sample-customer
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
