shopping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping
  labels:
    app: shopping
    service: shopping
spec:
  selector:
    app: shopping
  ports:
  - port: 9001
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping
  labels:
    app: shopping
    version: v1
spec:
  selector:
    matchLabels:
      app: shopping
      version: v1
  template:
    metadata:
      labels:
        app: shopping
        version: v1
    spec:
      containers:
      - name: shopping
        image: southouse/istio-sample-shopping
        ports:
        - containerPort: 8080
          protocol: TCP
