user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: user
  ports:
  - port: 9001
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: southouse/istio-sample-user
        ports:
        - containerPort: 8080
          protocol: TCP
