gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istiosample-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istiosample
spec:
  hosts:
  - "*"
  gateways:
  - istiosample-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/customer
    route:
    - destination:
        host: customer # Target Service Name
        port:
          number: 9001 # Target Service Port
  - match:
    - uri:
        prefix: /api/v1/booking
    route:
    - destination:
        host: booking
        port:
          number: 9001
  - match:
    - uri:
        prefix: /api/v1/shopping
    route:
    - destination:
        host: shopping
        port:
          number: 9001
